syntax = "proto3";
option java_multiple_files = true;
option java_package = "processor";
package proto;

service Processor {
  rpc submitImage(stream ImagePayload) returns (Identifier);
  rpc requestMap(Identifier) returns (stream ImagePayload);
  rpc requestData(Identifier) returns (Data);
  rpc requestRelatedImages(Precision) returns (stream RelatedResults);
}

message ImagePayload{
  bytes load = 1;
}

message Identifier {
  string id = 1;
}

message Precision {
  float value = 1;
}

message Coordinates {
  float x = 1;
  float y = 2;
}

message Landmark {
  string name = 1;
  Coordinates coordinates = 2;
  float precision = 3;
}

message Data {
  string id = 1;
  repeated Landmark landmarks = 2;
}

message RelatedResults{
  string id = 1;
  string name = 2;
}



